--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/klijentske-veb-aplikacije-2025",
+            "outputPath": "dist/kva-projekat1",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -60,10 +60,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "klijentske-veb-aplikacije-2025:build:production"
+              "buildTarget": "kva-projekat1:build:production"
             },
             "development": {
-              "buildTarget": "klijentske-veb-aplikacije-2025:build:development"
+              "buildTarget": "kva-projekat1:build:development"
             }
           },
           "defaultConfiguration": "development"
